Added google signin and some look changes

--- a/app/src/main/res/drawable/signup_button_background.xml
+++ b/app/src/main/res/drawable/signup_button_background.xml
@@ -3,7 +3,7 @@
 
     <stroke
         android:width="2dp"
-        android:color="@color/darkPink"/>
+        android:color="@color/bruntOrange2"/>
     <corners
         android:radius="25dp"/>
     <padding
@@ -12,5 +12,5 @@
         android:top="2dp"
         android:bottom="2dp"/>
     <solid
-        android:color="@color/darkPink"/>
+        android:color="@color/bruntOrange2"/>
 </shape>
