--- a/app/src/main/res/drawable/login_background.xml
+++ b/app/src/main/res/drawable/login_background.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:endColor="@color/lightPurple"
-        android:centerColor="@color/lightPink"
-        android:startColor="@color/lightPink2"
+        android:endColor="@color/red"
+        android:centerColor="@color/bruntOrange"
+        android:startColor="@color/bruntOrange"
         android:angle="90"
         />
     <padding
