--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,106 +8,66 @@
     android:padding="18dp"
     android:background="@drawable/login_background"
     >
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center">
             <ImageView
-                android:layout_width="240dp"
+                android:layout_width="200dp"
                 android:layout_height="120dp"
                 android:padding="16dp"
                 android:layout_marginTop="48dp"
                 android:layout_marginBottom="20dp"
                 android:src="@drawable/ic_local_cafe_black_24dp"
                 />
-            <EditText
-                android:layout_width="match_parent"
+            <com.google.android.gms.common.SignInButton
+                android:id="@+id/sign_in_button"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"
-                android:ems="10"
-                android:background="@android:color/transparent"
-                android:drawablePadding="12dp"
-                android:padding="8dp"
-                android:fontFamily="serif"
-                android:hint="Username"
-                android:textColorHint="#fff"
-                android:maxLines="1"
+                android:padding="10dp"/>
+            <EditText
+                android:drawablePadding="10dp"
                 android:drawableLeft="@drawable/ic_person_black_24dp"
-                android:layout_marginTop="20dp"
-                />
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#f9d7db"
-                />
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:hint="USERNAME"/>
             <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:ems="10"
-                android:drawablePadding="12dp"
-                android:padding="8dp"
-                android:hint="......."
-                android:textColorHint="#fff"
-                android:maxLines="1"
-                android:background="@android:color/transparent"
+                android:drawablePadding="10dp"
                 android:drawableLeft="@drawable/ic_lock_black_24dp"
-                />
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#f9d7db"
-                />
-            <CheckBox
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:hint="PASSWORD"
+                android:inputType="textPassword"/>
+            <LinearLayout
+                android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_gravity="left"
-                android:textColor="#fff"
-                android:text="Remember me"
-                android:padding="8dp"
-                />
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/login_button"
-                android:text="Log in"
-                android:textColor="@color/difPink"
-                android:padding="16dp"
-                android:clickable="true"
-                style="@style/Base.TextAppearance.AppCompat.Body1"
-                android:layout_marginTop="24dp"
-                android:textSize="18sp"
-                />
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/signup_button_background"
-                android:text="sign up"
-                style="@style/Base.TextAppearance.AppCompat.Body1"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                android:layout_marginTop="16dp"
-                android:clickable="true"
-                android:padding="16dp"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Forget your password?"
-                style="@style/Base.TextAppearance.AppCompat.Body2"
-                android:textColor="@color/white"
-                android:textSize="12dp"
-                android:padding="16dp"
-                android:clickable="true"
-                android:layout_marginBottom="16dp"
-                android:layout_gravity="left"/>
+                android:orientation="horizontal"
+                android:layout_gravity="center">
+                <Button
+                    android:layout_margin="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/login_button"
+                    android:text="Log in"
+                    android:textColor="@color/difPink"
+                    android:padding="16dp"
+                    android:clickable="true"
+                    android:textSize="12sp"
+                    />
+                <Button
+                    android:layout_margin="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/signup_button_background"
+                    android:text="sign up"
+                    style="@style/Base.TextAppearance.AppCompat.Body1"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"
+                    android:clickable="true"
+                    android:padding="16dp"
+                    />
+            </LinearLayout>
         </LinearLayout>
-    </ScrollView>
-
-
 </LinearLayout>
