--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -1,36 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
-    android:layout_width="match_parent"
-    android:layout_height="300dp"
-    android:padding="15dp">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:padding="15dp"
+    android:outlineProvider="bounds"
+    android:clipToPadding="false">
+    
+    <android.support.v7.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:cardCornerRadius="6dp"
+        android:elevation="2dp">
+        
+        <FrameLayout
+            android:layout_width="300dp"
+            android:layout_height="500dp"
+            android:layout_gravity="center"
+            android:background="@color/grassGreen"
+            android:orientation="vertical"
+            android:id="@+id/linearLayout">
+            <TextView
+                android:id="@+id/helloText"
+                android:textSize="30sp"
+                android:textColor="@android:color/white"
+                android:background="@color/grassGreen"
+                android:gravity="center"
+                tools:text="@string/card_start"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/helloText"
-        android:textSize="40sp"
-        android:textColor="@android:color/white"
-        android:background="@color/grassGreen"
-        android:gravity="center"
-        tools:text="@string/card_start"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:padding="20dp"
+                android:id="@+id/image"/>
 
-    <View
-        android:id="@+id/item_swipe_left_indicator"
-        android:alpha="0"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_margin="10dp"
-        android:background="#A5F" />
+            <View
+                android:id="@+id/item_swipe_left_indicator"
+                android:alpha="0"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="10dp"
+                android:background="#A5F" />
 
-    <View
-        android:id="@+id/item_swipe_right_indicator"
-        android:alpha="0"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_margin="10dp"
-        android:layout_gravity="right"
-        android:background="#5AF" />
+            <View
+                android:id="@+id/item_swipe_right_indicator"
+                android:alpha="0"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="10dp"
+                android:layout_gravity="right"
+                android:background="#5AF" />
+        </FrameLayout>
+    </android.support.v7.widget.CardView>
+    
 
-</FrameLayout>
+
+</LinearLayout>
