--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -5,7 +5,10 @@
     android:layout_gravity="center"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="15dp"
+    android:paddingLeft="40sp"
+    android:paddingRight="40sp"
+    android:paddingTop="20sp"
+    android:paddingBottom="20sp"
     android:outlineProvider="bounds"
     android:clipToPadding="false">
     
@@ -16,7 +19,7 @@
         app:cardCornerRadius="6dp"
         android:elevation="2dp">
         
-        <FrameLayout
+        <LinearLayout
             android:layout_width="300dp"
             android:layout_height="500dp"
             android:layout_gravity="center"
@@ -55,7 +58,7 @@
                 android:layout_margin="10dp"
                 android:layout_gravity="right"
                 android:background="#5AF" />
-        </FrameLayout>
+        </LinearLayout>
     </android.support.v7.widget.CardView>
     
 
