--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -5,10 +5,10 @@
     android:layout_gravity="center"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:paddingLeft="40sp"
-    android:paddingRight="40sp"
-    android:paddingTop="20sp"
-    android:paddingBottom="20sp"
+    android:paddingLeft="30sp"
+    android:paddingRight="30sp"
+    android:paddingTop="15sp"
+    android:paddingBottom="15sp"
     android:outlineProvider="bounds"
     android:clipToPadding="false">
     
@@ -20,15 +20,15 @@
         android:elevation="2dp">
         
         <LinearLayout
-            android:layout_width="300dp"
-            android:layout_height="500dp"
+            android:layout_width="320dp"
+            android:layout_height="510dp"
             android:layout_gravity="center"
             android:background="@color/grassGreen"
             android:orientation="vertical"
             android:id="@+id/linearLayout">
             <TextView
                 android:id="@+id/helloText"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:textColor="@android:color/white"
                 android:background="@color/grassGreen"
                 android:gravity="center"
@@ -41,7 +41,27 @@
                 android:layout_height="200dp"
                 android:padding="20dp"
                 android:id="@+id/image"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/rating"
+                    android:textSize="15sp"
+                    android:textColor="@color/white"
+                    android:gravity="center"
 
+                    android:layout_width="160dp"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/phone"
+                    android:textSize="15sp"
+                    android:textColor="@color/white"
+                    android:gravity="left"
+
+                    android:layout_width="160dp"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
             <View
                 android:id="@+id/item_swipe_left_indicator"
                 android:alpha="0"
