--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -23,14 +23,14 @@
             android:layout_width="320dp"
             android:layout_height="510dp"
             android:layout_gravity="center"
-            android:background="@color/grassGreen"
+            android:background="@color/lightRed"
             android:orientation="vertical"
             android:id="@+id/linearLayout">
             <TextView
                 android:id="@+id/helloText"
                 android:textSize="25sp"
                 android:textColor="@android:color/white"
-                android:background="@color/grassGreen"
+                android:background="@color/darkRed"
                 android:gravity="center"
                 tools:text="@string/card_start"
                 android:layout_width="match_parent"
@@ -38,9 +38,11 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="300dp"
                 android:padding="20dp"
-                android:id="@+id/image"/>
+                android:id="@+id/image"
+                android:scaleType="centerInside"
+                android:adjustViewBounds="true"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
