--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -26,23 +26,27 @@
             android:background="@color/lightRed"
             android:orientation="vertical"
             android:id="@+id/linearLayout">
+
             <TextView
                 android:id="@+id/helloText"
-                android:textSize="25sp"
-                android:textColor="@android:color/white"
-                android:background="@color/darkRed"
-                android:gravity="center"
-                tools:text="@string/card_start"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:background="@color/darkRed"
+                android:fontFamily="@font/great_vibes_regular"
+                android:gravity="center"
+                android:textColor="@android:color/white"
+                android:textSize="35sp"
+                tools:text="@string/card_start"
+                android:padding="3dp"/>
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:padding="20dp"
                 android:id="@+id/image"
-                android:scaleType="centerInside"
-                android:adjustViewBounds="true"/>
+                android:scaleType="center"
+                android:adjustViewBounds="true"
+                android:layout_margin="3dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
