--- a/app/src/main/res/drawable/image_border.xml
+++ b/app/src/main/res/drawable/image_border.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <corners android:radius="6dp"></corners>
     <stroke
         android:width="7dp"
-        android:color="#de0707" />
+        android:color="@color/deepBlue" />
 </shape>
