--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -3,27 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:paddingLeft="30sp"
-    android:paddingRight="30sp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="15sp"
+    android:paddingRight="15sp"
     android:paddingTop="15sp"
     android:paddingBottom="15sp"
     android:outlineProvider="bounds"
-    android:clipToPadding="false">
+    android:clipToPadding="false"
+    android:weightSum="80">
     
     <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         app:cardCornerRadius="6dp"
         android:elevation="2dp">
         
         <LinearLayout
-            android:layout_width="320dp"
-            android:layout_height="510dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:background="@color/lightRed"
+            android:background="@color/darkRed"
             android:orientation="vertical"
             android:id="@+id/linearLayout">
 
@@ -41,33 +42,57 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="0dp"
                 android:padding="20dp"
                 android:id="@+id/image"
                 android:scaleType="center"
                 android:adjustViewBounds="true"
-                android:layout_margin="3dp"/>
+                android:layout_margin="3dp"
+                android:background="@color/lightRed"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="3dp"
+                android:layout_weight="1"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:background="@color/darkRed">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/yelpStars"
+                    android:scaleType="centerInside"
+                    android:adjustViewBounds="true"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:padding="5dp"/>
                 <TextView
-                    android:id="@+id/rating"
+                    android:id="@+id/reviewCount"
                     android:textSize="15sp"
                     android:textColor="@color/white"
                     android:gravity="center"
-
-                    android:layout_width="160dp"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:id="@+id/phone"
-                    android:textSize="15sp"
-                    android:textColor="@color/white"
-                    android:gravity="left"
-
-                    android:layout_width="160dp"
-                    android:layout_height="wrap_content" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:padding="5dp"/>
             </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/phone"
+                android:textSize="15sp"
+                android:textColor="@color/white"
+                android:gravity="left"
+
+                android:layout_width="160dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
             <View
                 android:id="@+id/item_swipe_left_indicator"
                 android:alpha="0"
