--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="bruntOrange2">#DF4521</color>
     <color name="lightRed">#F44336</color>
     <color name="darkRed">#D32F2F</color>
+    <color name="deepBlue">#08415C</color>
 </resources>
