--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -70,7 +70,7 @@
                 <TextView
                     android:id="@+id/reviewCount"
                     android:textSize="15sp"
-                    android:textColor="@color/white"
+                    android:textColor="@color/lightYellow"
                     android:gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -82,15 +82,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/phone"
-                android:textSize="15sp"
-                android:textColor="@color/white"
-                android:gravity="left"
-
-                android:layout_width="160dp"
-                android:layout_height="wrap_content" />
+            android:orientation="horizontal"
+            android:layout_gravity="center">
+            //Put review image with review in here. Make it look good :P
         </LinearLayout>
 
             <View
